@@ -1,6 +1,9 @@
 shady-skin Revision History
 ----------------------------------
 
+2018-04-10:
+- Rearranged separators in displaymenuschedules
+
 2018-03-02:
 - Show menutitle in mcMain if not VDR
 
